--- a/CLib/Otchetixaml.xaml
+++ b/CLib/Otchetixaml.xaml
@@ -30,13 +30,15 @@
             </Grid.ColumnDefinitions>
 
             <!-- Левая панель -->
-            <StackPanel Grid.Column="0" Margin="10,10,10,0" VerticalAlignment="Top">
+            <StackPanel Grid.Column="0" Margin="10,0,10,0" VerticalAlignment="Center" Height="354">
                 <Button Content="Доходы по магазинам" Margin="0,10,0,0" FontSize="16" Click="GenerateRevenueReport_Click" Height="50"/>
                 <Button Content="Популярные книги" Margin="0,10,0,0" FontSize="16" Click="GeneratePopularBooksReport_Click" Height="50"/>
                 <Button Content="Товары с низкими остатками" Margin="0,10,0,0" FontSize="16" Click="GenerateLowStockReport_Click" Height="50"/>
                 <Button Content="Отчет по продажам и остаткам за все время" Margin="0,10,0,0" FontSize="16" Click="GenerateSalesAndStockReport_Click" Height="50"/>
+                <Button Content="Просмотр отчета" Margin="0,10,0,0" FontSize="16"  Click="OpenReportWindowButton_Click" Height="50"/>
+
                 <Button Content="Экспорт в PDF" Margin="0,10,0,0" FontSize="16" Click="ExportToPDFButton_Click" Height="50"/>
-                
+
             </StackPanel>
 
             <!-- DataGrid для отображения отчета -->
