--- a/CLib/AddCustomerDialog.xaml
+++ b/CLib/AddCustomerDialog.xaml
@@ -1,9 +1,12 @@
 ﻿<Window x:Class="CLib.AddCustomerDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Добавить клиента" Height="550" Width="500" Background="#F7F9FB" MinWidth="400" MinHeight="550">
+        Title="Добавить клиента" Height="550" Width="800" 
+        MinHeight="450" 
+        MinWidth="600" 
+        WindowState="Maximized" 
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <!-- Стиль для закругленных кнопок -->
         <Style TargetType="Button">
             <Setter Property="Background" Value="#4CAF50"/>
             <Setter Property="Foreground" Value="White"/>
@@ -31,22 +34,19 @@
     <Grid>
         <Border Background="White" CornerRadius="10" Margin="10" Padding="20" BorderBrush="#D3D3D3" BorderThickness="1">
             <StackPanel Margin="10" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <!-- Заголовок -->
+
                 <TextBlock Text="Добавить клиента" FontSize="20" FontWeight="Bold" Foreground="#333" Margin="0,0,0,20" HorizontalAlignment="Center"/>
 
-                <!-- Имя -->
                 <StackPanel Margin="0,0,0,10">
                     <TextBlock Text="Имя" FontWeight="SemiBold" Margin="0,0,0,5"/>
                     <TextBox Text="{Binding FirstName}" Width="400" Height="30" Padding="5" Background="#FAFAFA" BorderBrush="#CCCCCC" BorderThickness="1"/>
                 </StackPanel>
 
-                <!-- Фамилия -->
                 <StackPanel Margin="0,0,0,10">
                     <TextBlock Text="Фамилия" FontWeight="SemiBold" Margin="0,0,0,5"/>
                     <TextBox Text="{Binding LastName}" Width="400" Height="30" Padding="5" Background="#FAFAFA" BorderBrush="#CCCCCC" BorderThickness="1"/>
                 </StackPanel>
 
-                <!-- Телефон -->
                 <StackPanel Margin="0,0,0,10">
                     <TextBlock Text="Телефон" FontWeight="SemiBold" Margin="0,0,0,5"/>
                     <TextBox Text="{Binding Phone, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" 
@@ -64,20 +64,16 @@
                     </TextBox>
                 </StackPanel>
 
-
-                <!-- Номер дисконтной карты -->
                 <StackPanel Margin="0,0,0,10">
                     <TextBlock Text="Номер дисконтной карты" FontWeight="SemiBold" Margin="0,0,0,5"/>
                     <TextBox Text="{Binding DiscountCardNumber}" Width="400" Height="30" Padding="5" Background="#FAFAFA" BorderBrush="#CCCCCC" BorderThickness="1"/>
                 </StackPanel>
 
-                <!-- Скидка -->
                 <StackPanel Margin="0,0,0,10">
                     <TextBlock Text="Скидка" FontWeight="SemiBold" Margin="0,0,0,5"/>
                     <TextBox Text="{Binding DiscountRate}" Width="400" Height="30" Padding="5" Background="#FAFAFA" BorderBrush="#CCCCCC" BorderThickness="1"/>
                 </StackPanel>
 
-                <!-- Кнопки -->
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <Button Content="Сохранить" Click="SaveButton_Click"/>
                     <Button Content="Отмена" Background="#F44336" BorderBrush="#D32F2F" Click="CancelButton_Click"/>
