--- a/CLib/AddShipmentDialog.xaml
+++ b/CLib/AddShipmentDialog.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="CLib.AddShipmentDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Учет партий" Height="450" Width="600">
+        Title="Учет партий" Height="450" Width="800" 
+        MinHeight="450" 
+        MinWidth="600" 
+        WindowState="Maximized" 
+        WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -19,7 +23,6 @@
 
         <!-- Кнопки -->
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Сохранить" Click="SaveButton_Click" Width="100" Margin="0,0,10,0"/>
             <Button Content="Отмена" Click="CancelButton_Click" Width="100"/>
         </StackPanel>
     </Grid>
