--- a/CLib/Clientts.xaml
+++ b/CLib/Clientts.xaml
@@ -5,7 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CLib"
         mc:Ignorable="d"
-        Title="Clientts" Height="550" Width="800">
+        Title="Clientts" Height="550" Width="800" 
+        MinHeight="450" 
+        MinWidth="600" 
+        WindowState="Maximized" 
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="MenuButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent"/>
@@ -38,12 +42,9 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <!-- Верхнее меню -->
             <RowDefinition Height="*"/>
-            <!-- Основная часть -->
         </Grid.RowDefinitions>
 
-        <!-- Верхнее меню -->
         <Border Background="#1E1E2E" Height="60" Grid.Row="0">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -64,16 +65,13 @@
             </Grid>
         </Border>
 
-        <!-- Содержимое окна -->
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="300"/>
-                <!-- Левая панель -->
                 <ColumnDefinition Width="*"/>
-                <!-- Правая панель -->
             </Grid.ColumnDefinitions>
+            <TextBlock x:Name="CustomMessageBox" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" Background="Green" Foreground="White" FontSize="16" Padding="10"/>
 
-            <!-- Левая панель -->
             <StackPanel Margin="10" Grid.Column="0">
                 <Button Content="Регистрация клиента" FontSize="16" FontWeight="Bold" Margin="0,5" Click="AddCustomerButton_Click"/>
                 <Button Content="Редактирование клиента" FontSize="16" FontWeight="Bold" Margin="0,5" Click="UpdateCustomerButton_Click"/>
@@ -89,8 +87,6 @@
 
                 <Button Content="Поиск" FontSize="16" FontWeight="Bold" Margin="0,10" Click="SearchButton_Click"/>
             </StackPanel>
-
-            <!-- Правая панель -->
             <DataGrid x:Name="CustomersDataGrid" AutoGenerateColumns="False" HeadersVisibility="Column" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" 
                       ItemsSource="{Binding Products}" Margin="10" Grid.Column="1">
                 <DataGrid.Columns>
