--- a/CLib/InvoiceDialog.xaml
+++ b/CLib/InvoiceDialog.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="CLib.InvoiceDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Накладная" Height="400" Width="600" MinWidth="400" MinHeight="300">
+        Title="Накладная" Height="400" Width="800" 
+        MinHeight="450" 
+        MinWidth="600" 
+        WindowState="Maximized" 
+        WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -13,14 +17,14 @@
         </Grid.RowDefinitions>
 
         <!-- Заголовок -->
-        <TextBlock Text="Накладная" FontSize="18" FontWeight="Bold" Margin="0,0,0,10" Grid.Row="0"/>
+        <TextBlock Text="Накладная" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,20" Grid.Row="0"/>
 
         <!-- Текст накладной -->
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <TextBlock x:Name="InvoiceText" TextWrapping="Wrap" Margin="0,0,0,10"/>
+            <TextBlock x:Name="InvoiceText" TextWrapping="Wrap" TextAlignment="Justify" FontSize="16" LineHeight="24" Margin="20" Width="370"/>
         </ScrollViewer>
 
         <!-- Кнопка закрытия -->
-        <Button Content="Закрыть" HorizontalAlignment="Right" Margin="0,10,0,0" Grid.Row="2" Click="CloseButton_Click"/>
+        <Button Content="Закрыть" HorizontalAlignment="Right" Margin="0,10,20,0" Width="120" Height="40" FontSize="14" Grid.Row="2" Click="CloseButton_Click"/>
     </Grid>
 </Window>
