--- a/CLib/Otchetixaml.xaml
+++ b/CLib/Otchetixaml.xaml
@@ -1,14 +1,17 @@
 ﻿<Window x:Class="CLib.Otchetixaml"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Отчеты" Height="450" Width="800">
+        Title="Отчеты" Height="650" Width="800" 
+        MinHeight="450" 
+        MinWidth="600" 
+        WindowState="Maximized" 
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!-- Верхняя панель -->
         <Border Background="#1E1E2E" Height="60" VerticalAlignment="Top" Grid.Row="0">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -22,27 +25,30 @@
             </Grid>
         </Border>
 
-        <!-- Основное содержимое -->
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="21*"/>
+                <ColumnDefinition Width="29*"/>
             </Grid.ColumnDefinitions>
 
-            <!-- Левая панель -->
-            <StackPanel Grid.Column="0" Margin="10,0,10,0" VerticalAlignment="Center" Height="354">
+            <StackPanel Grid.Column="0" Margin="10,0,10,0" VerticalAlignment="Center" Height="555">
                 <Button Content="Доходы по магазинам" Margin="0,10,0,0" FontSize="16" Click="GenerateRevenueReport_Click" Height="50"/>
                 <Button Content="Популярные книги" Margin="0,10,0,0" FontSize="16" Click="GeneratePopularBooksReport_Click" Height="50"/>
                 <Button Content="Товары с низкими остатками" Margin="0,10,0,0" FontSize="16" Click="GenerateLowStockReport_Click" Height="50"/>
                 <Button Content="Отчет по продажам и остаткам за все время" Margin="0,10,0,0" FontSize="16" Click="GenerateSalesAndStockReport_Click" Height="50"/>
                 <Button Content="Просмотр отчета" Margin="0,10,0,0" FontSize="16"  Click="OpenReportWindowButton_Click" Height="50"/>
 
-                <Button Content="Экспорт в PDF" Margin="0,10,0,0" FontSize="16" Click="ExportToPDFButton_Click" Height="50"/>
+                <Button Content="Экспорт в PDF доходов по магазинам" Margin="0,10,0,0" FontSize="16" Click="ExportToPDFButton_Click" Height="50"/>
+                <Button Content="Экспорт в PDF популярные книги" Margin="0,10,0,0" FontSize="16" Click="ExportToPDFPopularBooksReport_Click" Height="50"/>
+                <Button Content="Экспорт в PDF товары с низкими остатками" Margin="0,10,0,0" FontSize="16" Click="ExportToPDFLowStockReport_Click" Height="50"/>
+                <Button Content="Экспорт в PDF продажи и остатки за все время" Margin="0,10,0,0" FontSize="16" Click="ExportToPDFSalesAndStockReport_Click" Height="50"/>
 
             </StackPanel>
 
-            <!-- DataGrid для отображения отчета -->
-            <DataGrid Grid.Column="1" x:Name="ReportDataGrid" AutoGenerateColumns="True" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" Margin="10"/>
+            <DataGrid Grid.Column="1" x:Name="ReportDataGrid" AutoGenerateColumns="True" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" Margin="10,10,10,10"/>
+
+            <TextBlock x:Name="CustomMessageBox" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" Background="Green" Foreground="White" FontSize="16" Padding="10"/>
+
         </Grid>
     </Grid>
 </Window>
