--- a/CLib/Prodavec.xaml
+++ b/CLib/Prodavec.xaml
@@ -5,7 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CLib"
         mc:Ignorable="d"
-        Title="Продажи" Height="450" Width="800">
+        Title="Продажи" Height="450" Width="800" 
+        MinHeight="450" 
+        MinWidth="600" 
+        WindowState="Maximized" 
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="MenuButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent"/>
