--- a/CLib/PurchaseHistoryWindow.xaml
+++ b/CLib/PurchaseHistoryWindow.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="CLib.PurchaseHistoryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="История покупок" Height="450" Width="800">
+        Title="История покупок" Height="450" Width="800" 
+        MinHeight="450" 
+        MinWidth="600" 
+        WindowState="Maximized" 
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <DataGrid x:Name="PurchaseHistoryDataGrid" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" Margin="10">
             <DataGrid.Columns>
