--- a/CLib/Postavki.xaml
+++ b/CLib/Postavki.xaml
@@ -77,6 +77,7 @@
             <StackPanel Grid.Column="0" Margin="10,10,10,0" VerticalAlignment="Top" Height="310">
                 <Button Content="Учет поступающих партий и товаров" Margin="0,10,0,0" FontSize="16" FontWeight="Bold" Click="AddShipmentButton_Click" Height="61"/>
                 <Button Content="Добавление новых поставок(поставщиков)" Margin="0,10,0,0" FontSize="16" FontWeight="Bold" Click="AddProductButton_Click" Height="58"/>
+                <Button Content="Редактирование поставок(поставщиков)" Margin="0,10,0,0" FontSize="16" FontWeight="Bold" Click="EditSupplierButton_Click" Height="58"/>
                 <Button Content="Формирование накладных" Margin="0,10,0,0" FontSize="16" FontWeight="Bold" Click="UpdateProductButton_Click" Height="59"/>
             </StackPanel>
 
